RSI and moving averages logic, basic api's creation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,7 @@
   <option value="IN">India</option>
 </select>
 <button onclick="fetchPrice()">Get Price</button>
+<button onclick="fetchAnalysis()">Analyze</button>
 
 <p id="output"></p>
 
