portfolio analysis supabase integration

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,8 @@
 </select>
 <button onclick="fetchPrice()">Get Price</button>
 <button onclick="fetchAnalysis()">Analyze</button>
+<br><br>
+<button onclick="fetchTrending()">Trending Stocks</button>
 
 <p id="output"></p>
 
